--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/express": "^5.0.0",
+    "@types/supertest": "^6.0.2",
     "prisma": "^6.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.0-dev.20241204"
